FIX: improve spacing on FAQ

--- a/src/sections/Faqs/Faqs.scss
+++ b/src/sections/Faqs/Faqs.scss
@@ -81,7 +81,7 @@
     grid-area: 1 / 1;
     display: flex;
     flex-direction: column;
-    gap: 0.8em;
+    gap: 1.2em;
     visibility: hidden;
     pointer-events: none;
 
@@ -93,7 +93,7 @@
 
   .faqs-questions__item {
     border-bottom: 1px solid rgba($color-primary, 0.15);
-    padding-bottom: 0.6em;
+    padding-bottom: 1em;
 
     &:last-child {
       border-bottom: none;
@@ -126,8 +126,9 @@
     color: $color-primary;
     opacity: 0.4;
     transition: opacity 0.3s;
-    letter-spacing: 0.15em;
+    letter-spacing: 0.12em;
     font-weight: 600;
+    line-height: 1.5em;
 
     &:hover {
       opacity: 0.7;
@@ -148,6 +149,7 @@
 
   .faqs-questions__answer {
     font-size: 1.1rem;
+    line-height: 1.5em;
     color: $color-primary;
     margin-top: 0.6em;
     letter-spacing: 0;
